# Tenhou-Paifu-Logger

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_zh.md  config.json  file_version_info.txt  launch.py  log.py  pyproject.toml  requirements.txt  runlog-user.bat  runlog-user.sh  runlog.bat  runlog.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: BUG_REPORT.yml  FEAT_REQUEST.yml  bug_report.md  feature_request.md
.github/workflows/: publish-to-pypi.yml  publish-to-test-pypi.yml  test.yml  to-pub.yml
READMEs/: README_ja.md  README_zh.md  README_zh_TW.md
doc/example_output/: Paifu.csv  Paifu.html  Paifu.xlsx  README.md  SanmaPaifu.csv  SanmaPaifu.html  SanmaPaifu.xlsx
localizations/: en.json  ja.json  zh_tw.json
paifulogger/: __init__.py  __main__.py  log.py  paifu_dl.py  version.py
paifulogger/i18n/: __init__.py
paifulogger/localizations/: en.json  ja.json  zh.json  zh_tw.json
paifulogger/logfile/: __init__.py  log_into_csv.py  log_into_html.py  log_into_template.py  log_into_xlsx.py
paifulogger/paifu/: __init__.py
paifulogger/src/: Paifu.py  Paifu.pyi  __init__.py  config.py  get_paifu.py  get_place.py  i18n.py  i18n.pyi  local.py  log_into_csv.py  log_into_html.py  log_into_template.py  log_into_xlsx.py  majsoul_handler.py  url_log.py  url_request_handler.py
paifulogger/utils/: __init__.py  get_paifu.py  url_log.py
pub_tools/: pub.py
src/: Haifu.py  __init__.py  get_haifu.py  get_paifu.py  get_place.py  local.py  log_into_html.py  log_into_xlsx.py  url_log.py  url_request_handler.py
src/localization/: local.py
src/localizations/: en.json  en.py  local.py  local_str.py  zh_tw.json  zh_tw.py
test/: test.py
test/test_data/: 2022060222gm-0001-0000-a87679bc&tw=3.mjlog  2022060222gm-0001-0000-f47dd061&tw=3.mjlog  2022060223gm-0001-0000-b8e20009&tw=2.mjlog  2022060400gm-0001-0000-d6c5c8e7&tw=3.mjlog
