[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "PaifuLogger"
version = "0.4.0.2"
description = "Logging tenhou paifu into excel or html file with some key information."
readme = "README.md"
authors = [{ name = "Jim137", email = "jim@mail.jim137.eu.org" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["mahjong", "review", "logger", "paifu", "tenhou", "haifu", "paipu", "riichi-mahjong"]
dependencies = ["openpyxl", "lxml", "tables", "pandas", "platformdirs"]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/Jim137/Tenhou-Paifu-Logger"

[project.scripts]
paifu = "paifulogger.__main__:main"
log = "paifulogger.log:main"
plog = "paifulogger.log:main"
plogger = "paifulogger.log:main"
paifulog = "paifulogger.log:main"
pdl = "paifulogger.paifu_dl:main"

[tool.setuptools.packages.find]
exclude = [
    "Paifu",
    "牌譜",
]

[tool.setuptools.package-data]
"paifulogger.localizations" = [
    "*.json",
]